Resolvednav overflowing main by adding header tag

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ main{
     margin: 0 auto;
 }
 
+header{
+    position: relative;
+}
 
 nav{
     display: flex;
